[tool.poetry]
name = "ssat-rasa"
version = "0.1.0"
description = ""
authors = ["deniz gül <denizgul@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
rasa = "^2.2.5"
fuzzywuzzy = "^0.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
